--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "webpack --profile --json > stats.json --config build/webpack.config.js --color --progress",
     "build": "webpack --color --progress --config build/webpack.config.js --mode production --env prod",
     "test": "webpack --env test --config build/webpack.prod.js --color --progress",
-    "build:dll": "webpack --config ./build/webpack.dll.js",
+    "dll": "webpack --config build/dll.js --mode production --env prod",
     "add": "add-component",
     "lint-staged": "lint-staged",
     "prettier": "prettier --write \"{src,mock}/**/*.{ts,tsx,js,css,less}\"",
@@ -32,6 +32,7 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
